; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/platform/gl/extr_gl-annotate.c_do_save_pdf_file.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/platform/gl/extr_gl-annotate.c_do_save_pdf_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@pdf = common dso_local global i64 0, align 8
@filename = common dso_local global i32 0, align 4
@pdf_filter = common dso_local global i32 0, align 4
@save_pdf_dialog = common dso_local global i32 0, align 4
@ui = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @do_save_pdf_file() #0 {
  %1 = load i64, i64* @pdf, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %9

3:                                                ; preds = %0
  %4 = call i32 (...) @init_save_pdf_options()
  %5 = load i32, i32* @filename, align 4
  %6 = load i32, i32* @pdf_filter, align 4
  %7 = call i32 @ui_init_save_file(i32 %5, i32 %6)
  %8 = load i32, i32* @save_pdf_dialog, align 4
  store i32 %8, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ui, i32 0, i32 0), align 4
  br label %9

9:                                                ; preds = %3, %0
  ret void
}

declare dso_local i32 @init_save_pdf_options(...) #1

declare dso_local i32 @ui_init_save_file(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
